Create the drivers through their constructor, not through the class
Class.newInstance() has been deprecated since Java 9: it throws the
constructor's checked exceptions without declaring them, which the
compiler cannot see past. The eleven places that reach for a driver by
name -- the radar, the laser, the beacon scanner, the camera and the UDP
one, the compass, the GPS, the INS, the captors, the vision and the
filter factory -- now ask the class for its constructor and call that.
All of them already catch Exception, so nothing else changes.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TvYx8B8HmcDpeU91zwMff3